--- a/butters.cabal
+++ b/butters.cabal
@@ -16,7 +16,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Butters.Parser
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5, QuickCheck -any
+  build-depends:       base >= 4.7 && < 5, parsec -any
 
 test-suite test-butters
   hs-source-dirs:      test/Butters/
