--- a/butters.cabal
+++ b/butters.cabal
@@ -15,11 +15,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Butters.Parser
+                       ,Butters.TypeChecker
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5, parsec -any
 
 test-suite test-butters
   hs-source-dirs:      test/Butters/
-  type:       exitcode-stdio-1.0
-  main-is:    TestParser.hs
-  build-depends: base >= 4.7 && < 5, butters, QuickCheck -any
+  type:                exitcode-stdio-1.0
+  main-is:             TestMain.hs
+  build-depends:       base >= 4.7 && < 5, butters, QuickCheck -any
