--- a/butters.cabal
+++ b/butters.cabal
@@ -16,6 +16,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Butters.Parser
                        ,Butters.TypeChecker
+                       ,Butters.Ast
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5, parsec -any
 
